# nekotatsu-mobile

./: Cargo.toml  Dioxus.toml  README.md
assets/: logo.svg.br  styles.css  styles.css.br
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
