[package]
name = "nekotatsu-mobile-ui"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dioxus = { version = "0.6", features = ["web"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0.133"
futures = "0.3.31"
apply = "0.3.0"
bevy_reflect = "0.16.1"

[workspace]
members = ["src-tauri"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
strip = true
panic = "abort"

